--- a/.gitignore
+++ b/.gitignore
@@ -249,4 +249,4 @@ fabric.properties
 
 # End of https://www.gitignore.io/api/java,kotlin,android,androidstudio
 
-settings.gradle
+settings.gradle.kts
