--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,14 +8,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.DarkMode">
-        <activity android:name=".MainActivity">
+        android:theme="@style/Theme.SystemMode">
+        <activity android:name=".ui.home.HomeActivity"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.setting.SettingActivity"/>
+        <activity android:name=".ui.add.AddActivity"/>
     </application>
 
 </manifest>
