--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:name=".ui.AppApplication"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SystemMode">
@@ -18,6 +19,7 @@
         </activity>
         <activity android:name=".ui.setting.SettingActivity"/>
         <activity android:name=".ui.add.AddActivity"/>
+        <activity android:name=".ui.detail.DetailActivity"/>
     </application>
 
 </manifest>
